View branches and commits

--- a/frontend/src/app/components/branch-list/branch-list.component.html
+++ b/frontend/src/app/components/branch-list/branch-list.component.html
@@ -1,7 +1,7 @@
 <div class="mat-elevation-z8">
   <button
     mat-icon-button
-    aria-label="Refresh repo list"
+    aria-label="Refresh branch list"
     (click)="refreshTable()"
   >
     <mat-icon>refresh</mat-icon>
