--- a/frontend/src/app/components/commit-list/commit-list.component.html
+++ b/frontend/src/app/components/commit-list/commit-list.component.html
@@ -1,16 +1,16 @@
 <div class="mat-elevation-z8">
   <button
     mat-icon-button
-    aria-label="Refresh repo list"
+    aria-label="Refresh commit list"
     (click)="refreshTable()"
   >
     <mat-icon>refresh</mat-icon>
   </button>
   <table mat-table [dataSource]="dataSource">
-    <!-- name Column -->
-    <ng-container matColumnDef="name" class="table-row">
-      <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+    <!-- message Column -->
+    <ng-container matColumnDef="message" class="table-row">
+      <th mat-header-cell *matHeaderCellDef>Message</th>
+      <td mat-cell *matCellDef="let element">{{ element.message }}</td>
     </ng-container>
 
     <!-- Action Column -->
@@ -32,7 +32,8 @@
   </table>
 
   <mat-paginator
-    [pageSizeOptions]="[5, 10, 20]"
-    showFirstLastButtons
+    [length]="30"
+    [pageSizeOptions]="[5, 10, 25]"
+    [pageSize]="5"
   ></mat-paginator>
 </div>
