--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -15,24 +15,14 @@
       >
       <a
         mat-list-item
+        (click)="router.navigate(['repos/add'], { relativeTo: activeRoute })"
+        >Add Repo</a
+      >
+      <a
+        mat-list-item
         (click)="router.navigate(['repos'], { relativeTo: activeRoute })"
         >Repositories</a
       >
-
-      <a
-        mat-list-item
-        (click)="router.navigate(['branches'], { relativeTo: activeRoute })"
-        >Branches</a
-      >
-
-      <a
-        mat-list-item
-        (click)="router.navigate(['commits'], { relativeTo: activeRoute })"
-        >Commits</a
-      >
-      <a mat-list-item (click)="startAuthorRegistration()">Register author</a>
-      <a mat-list-item (click)="startReaderRegistration()">Register reader</a>
-      <a mat-list-item (click)="startWorkPublishing()">Publish work</a>
       <a mat-list-item (click)="logout()">Logout</a>
     </mat-nav-list>
   </mat-sidenav>
