--- a/frontend/src/app/components/repository-list/repository-list.component.html
+++ b/frontend/src/app/components/repository-list/repository-list.component.html
@@ -1,4 +1,7 @@
 <div class="mat-elevation-z8">
+  <button mat-icon-button aria-label="keyboard_backspace" (click)="back()">
+    <mat-icon>keyboard_backspace</mat-icon>
+  </button>
   <button
     mat-icon-button
     aria-label="Refresh repo list"
@@ -9,20 +12,39 @@
   <table mat-table [dataSource]="dataSource">
     <!-- name Column -->
     <ng-container matColumnDef="name" class="table-row">
-      <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+      <th mat-header-cell *matHeaderCellDef>Repository Name</th>
+      <td mat-cell *matCellDef="let element">
+        <a mat-button (click)="viewBranches(element)">{{ element.name }}</a>
+      </td>
     </ng-container>
 
-    <!-- Action Column -->
+    <!-- action Column -->
     <ng-container matColumnDef="action" class="table-row">
-      <th mat-header-cell *matHeaderCellDef>Action</th>
+      <th mat-header-cell *matHeaderCellDef>Actions</th>
       <td mat-cell *matCellDef="let element">
         <button
+          matTooltip="View details"
           mat-icon-button
           aria-label="Action"
-          (click)="viewForm(element.id)"
+          (click)="viewBranches(element.name)"
+        >
+          <mat-icon>preview</mat-icon>
+        </button>
+        <button
+          matTooltip="Change repo settings"
+          mat-icon-button
+          aria-label="Action"
+          (click)="viewBranches(element.name)"
         >
           <mat-icon>settings</mat-icon>
+        </button>
+        <button
+          matTooltip="Reload repository from Github"
+          mat-icon-button
+          aria-label="Action"
+          (click)="viewBranches(element.name)"
+        >
+          <mat-icon>download</mat-icon>
         </button>
       </td>
     </ng-container>
