issue labels feature frontend display finished

--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -23,6 +23,11 @@
         (click)="router.navigate(['repos'], { relativeTo: activeRoute })"
         >Repositories</a
       >
+      <a
+        mat-list-item
+        (click)="router.navigate(['labels'], { relativeTo: activeRoute })"
+        >Labels</a
+      > 
       <a mat-list-item (click)="logout()">Logout</a>
     </mat-nav-list>
   </mat-sidenav>
