--- a/frontend/src/app/components/labels-list/labels-list.component.html
+++ b/frontend/src/app/components/labels-list/labels-list.component.html
@@ -10,16 +10,19 @@
       <mat-icon>refresh</mat-icon>
     </button>
     <mat-spinner class="spinner" diameter="30" *ngIf="showSpinner"></mat-spinner>
-    <table mat-table [dataSource]="dataSource">
+
+    <button mat-raised-button (click)="openCreateLabelDialog()">New Label</button>
+
+    <table mat-table [dataSource]="dataSource" >
       <!-- name Column -->
-      <ng-container matColumnDef="name" class="table-row">
+      <ng-container matColumnDef="name" class="table-row" >
         <th mat-header-cell *matHeaderCellDef>Label Name</th>
         <td mat-cell *matCellDef="let element">
             {{ element.name }}
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="description" class="table-row">
+      <ng-container matColumnDef="description" class="table-row" ng-style="{background:red}">
         <th mat-header-cell *matHeaderCellDef>Label Description</th>
         <td mat-cell *matCellDef="let element">
             {{ element.description }}
@@ -28,12 +31,34 @@
 
       <ng-container matColumnDef="color" class="table-row">
         <th mat-header-cell *matHeaderCellDef>Label Color</th>
-        <td mat-cell *matCellDef="let element">
+        <td mat-cell *matCellDef="let element" [style.background-color] = "element.color">
             {{ element.color }}
         </td>
       </ng-container>
   
       <!-- action Column -->
+      <ng-container matColumnDef="action" class="table-row">
+        <th mat-header-cell *matHeaderCellDef>Actions</th>
+        <td mat-cell *matCellDef="let element">
+          <button
+            matTooltip="Update label information"
+            mat-icon-button
+            aria-label="Action"
+            (click)="openUpdateLabelDialog(element)"
+          >
+            <mat-icon>settings</mat-icon>
+          </button>
+
+          <button
+            matTooltip="Delete label"
+            mat-icon-button
+            aria-label="Action"
+            (click)="openDeleteConfirmationDialog(element)"
+          >
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
       
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
