--- a/frontend/src/app/components/issues/issue-list/issue-list.component.html
+++ b/frontend/src/app/components/issues/issue-list/issue-list.component.html
@@ -10,7 +10,8 @@
                 <ng-container matColumnDef="title" class="table-row">
                     <th mat-header-cell *matHeaderCellDef>Title</th>
                     <td mat-cell *matCellDef="let element">
-                        {{ element.title }}
+                        <a mat-button (click)="viewIssueDetails(element)"> {{ element.title }}</a>
+
                     </td>
                 </ng-container>
 
@@ -34,10 +35,10 @@
                 <ng-container matColumnDef="state" class="table-row">
                     <th mat-header-cell *matHeaderCellDef>Status</th>
                     <td mat-cell *matCellDef="let element">
-                        <ng-container *ngIf=" element.state === 'OP'">
+                        <ng-container *ngIf=" element.state === stateEnum.Open.toString()">
                             Open
                         </ng-container>
-                        <ng-container *ngIf="element.state != 'OP'">
+                        <ng-container *ngIf="element.state != stateEnum.Open.toString()">
                             Closed
                         </ng-container>
 
@@ -69,9 +70,10 @@
                         <button mat-icon-button (click)="edit(element)">
                             <mat-icon aria-label="Edit milestone">edit</mat-icon>
                         </button>
-                        <ng-container *ngIf=" element.state === 'OP'">
-                            <button mat-icon-button color="warn" (click)="changeState(element, 'CL')"
-                                matTooltip="Close this milestone" [matTooltipPosition]="close_position.value">
+                        <ng-container *ngIf=" element.state === stateEnum.Open.toString()">
+                            <button mat-icon-button color="warn"
+                                (click)="changeState(element, stateEnum.Closed.toString())"
+                                matTooltip="Close this issue" [matTooltipPosition]="close_position.value">
                                 <span class="material-icons">
                                     check_circle_outline
                                 </span>
