collaborat list view implemented

--- a/frontend/src/app/components/branch-list/branch-list.component.html
+++ b/frontend/src/app/components/branch-list/branch-list.component.html
@@ -61,6 +61,11 @@
       <h2>
         <button mat-flat-button color="primary" [routerLink]="['/repos', repo_obj.id, 'issues']">Issues</button>
       </h2>
+      <br />
+      <h2>
+        <button mat-flat-button color="primary"
+          [routerLink]="['/repos', repo_obj.id, 'collaborators']">Collaboratos</button>
+      </h2>
     </div>
   </div>
 
