collaborator list view implemented; add/remove collaborator implemented

--- a/frontend/src/app/components/collaborators/collaborators.component.html
+++ b/frontend/src/app/components/collaborators/collaborators.component.html
@@ -46,7 +46,7 @@
         <div class="col-4">
             <br />
             <h2>
-                <button mat-flat-button color="primary">Add
+                <button mat-flat-button color="primary" (click)="openSerachCollaboratorsDialog()">Add
                     collaborator</button>
             </h2>
         </div>
