labels moved to be repository specific

--- a/frontend/src/app/components/branch-list/branch-list.component.html
+++ b/frontend/src/app/components/branch-list/branch-list.component.html
@@ -63,6 +63,10 @@
       </h2>
       <br />
       <h2>
+        <button mat-flat-button color="primary" [routerLink]="['/repos', repo_obj.id, 'labels']">Labels</button>
+      </h2>
+      <br />
+      <h2>
         <button mat-flat-button color="primary"
           [routerLink]="['/repos', repo_obj.id, 'collaborators']">Collaboratos</button>
       </h2>
